# functest

./: .coveragerc  .gitignore  .gitmodules  .gitreview  .pre-commit-config.yaml  .travis.yml  :  Dockerfile  INFO  INFO.yaml  LICENSE  PI.md  README.md  build.sh  dummy.txt  functest.rst  generate_swagger_specs.py  kingbird_requirements.txt  mail.py  onboarding.txt  requirements.py3.txt  requirements.txt  requirements_alignment.sh  rtd-requirements.txt  run_tests.sh  run_unit_tests.sh  s.tst  setup.cfg  setup.py  test-requirements.txt  test.txt  thirdparty-requirements.txt  tox.ini  unit_test_cover.sh  upper-constraints.txt
.circleci/: config.yml
CI/: prepare_env.py  testcases.yaml  tier_builder.py  tier_handler.py  tier_manager.py
ansible/: site.cntt.yml  site.gate.yml  site.yml
ansible/host_vars/: 127.0.0.1
api/: Makefile  conf.py  requirements.txt
api/apidoc/: functest.ci.check_deployment.rst  functest.ci.rst  functest.core.cloudify.rst  functest.core.robotframework.rst  functest.core.rst  functest.core.singlevm.rst  functest.core.tenantnetwork.rst  functest.core.unit.rst  functest.opnfv_tests.openstack.api.connection_check.rst  functest.opnfv_tests.openstack.api.rst  functest.opnfv_tests.openstack.cinder.cinder_test.rst  functest.opnfv_tests.openstack.cinder.rst  functest.opnfv_tests.openstack.intel_nfv_ci.intel_nfv_ci.rst  functest.opnfv_tests.openstack.intel_nfv_ci.rst  functest.opnfv_tests.openstack.patrole.patrole.rst  functest.opnfv_tests.openstack.patrole.rst  functest.opnfv_tests.openstack.rally.rally.rst  functest.opnfv_tests.openstack.rally.rst  functest.opnfv_tests.openstack.refstack.refstack.rst  functest.opnfv_tests.openstack.refstack.rst  functest.opnfv_tests.openstack.rst  functest.opnfv_tests.openstack.shaker.rst  functest.opnfv_tests.openstack.shaker.shaker.rst  functest.opnfv_tests.openstack.snaps.api_check.rst  functest.opnfv_tests.openstack.snaps.health_check.rst  functest.opnfv_tests.openstack.snaps.rst  functest.opnfv_tests.openstack.snaps.smoke.rst  functest.opnfv_tests.openstack.snaps.snaps_suite_builder.rst  functest.opnfv_tests.openstack.snaps.snaps_test_runner.rst  functest.opnfv_tests.openstack.snaps.snaps_utils.rst  functest.opnfv_tests.openstack.tempest.conf_utils.rst  functest.opnfv_tests.openstack.tempest.rst  functest.opnfv_tests.openstack.tempest.tempest.rst  functest.opnfv_tests.openstack.vgpu.rst  functest.opnfv_tests.openstack.vgpu.vgpu.rst  functest.opnfv_tests.openstack.vmtp.rst  functest.opnfv_tests.openstack.vmtp.vmtp.rst  functest.opnfv_tests.openstack.vping.rst  functest.opnfv_tests.openstack.vping.vping_ssh.rst  functest.opnfv_tests.openstack.vping.vping_userdata.rst  (+29 more)
ci/: check_os.sh  config_functest.yaml  config_patch.yaml  daily.yaml  exec_test.sh  gate.yaml  generate_report.py  generate_results.py  globals.yaml  prepare_env.py  run.yaml  run_test.py  run_tests.py  testcases.yaml  tier_builder.py  tier_handler.py
cli/: cli_base.py
cli/commands/: cli_env.py  cli_os.py  cli_testcase.py  cli_tier.py
cli/functest.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
commons/: traffic-profile-guidelines.rst
commons/mobile/: readme.rst
core/: TestCasesBase.py  TestCasesBaseTesting.py
docker/: Dockerfile  Dockerfile.aarch64  Dockerfile.aarch64.patch  add_images.sh  common.sh  config_install_env.sh  demo.sh  prepare_env.sh  requirements.pip  requirements_alignment.sh  run_tests.sh  start.sh  thirdparty-requirements.txt  upper-constraints.txt
docker/benchmarking/: Dockerfile  attrdict.patch  testcases.yaml
docker/benchmarking-cntt/: Dockerfile  blacklist.yaml  testcases.yaml
docker/browbeat/: Dockerfile  testcases.yaml
docker/components/: Dockerfile  Dockerfile.aarch64.patch  testcases.yaml
docker/core/: 9df662e053.patch  Create-new-server-test_reboot_server_hard.patch  Dockerfile  Dockerfile.aarch64.patch  Fix-of-wrong-parsing-of-flavour-name-and-disk_over_c.patch  Fix-str-to-str-comparison-in-live-migration-test.patch  Fix-the-unstable_test-syntax-for-test_live_migration.patch  Fixes-race-condition-in-test_add_remove_fixed_ip.patch  Increase-Thread-stack-size.patch  Switch-to-threading.Thread-for-Rally-tasks.patch  Try-to-detect-the-race-conditions.patch  ba5cb852b8.patch  object-storage-fix-and-cleanup-header-checks.patch  testcases.yaml
docker/docker_remote_api/: enable_remote_api.sh
docker/dockerfiles/: Dockerfile_base  Dockerfile_core  Dockerfile_features  Dockerfile_orchestrator  Dockerfile_vims
docker/features/: Dockerfile  Dockerfile.aarch64.patch  testcases.yaml  thirdparty-requirements.txt
docker/healthcheck/: Dockerfile  Dockerfile.aarch64.patch  testcases.yaml  thirdparty-requirements.txt
docker/parser/: Dockerfile  Dockerfile.aarch64.patch  testcases.yaml  (+1 more)
docs/: conf.py  conf.yaml  functest.rst  index.rst  main.rst  spelling_wordlist.txt
testcases/: config_functest.py  config_functest.yaml  fetch_os_creds.sh  functest.yaml  functest_utils.py  openstack_utils.py  testcases.yaml
utils/: clean_openstack.py  config_functest.py  functest_logger.py  functest_utils.py  functest_vacation.py  generate_defaults.py  get_sdn_type.sh  openstack_clean.py  openstack_snapshot.py  openstack_utils.py  ssh_utils.py
(+864 files in other folders)
