[metadata]
name = functest
version = 6
home-page = https://wiki.opnfv.org/display/functest

[files]
packages = functest
scripts =
    functest/ci/convert_images.sh
    functest/ci/download_images.sh

[entry_points]
console_scripts =
    functest = functest.cli.cli_base:cli
    functest_odl = functest.opnfv_tests.sdn.odl.odl:main
    check_deployment = functest.ci.check_deployment:main
    functest_restapi = functest.api.server:main

[build_sphinx]
all_files = 1
build-dir = api/build/
source-dir = api

[wheel]
universal = 1
