[metadata]
name = functest
version = 7
home-page = https://wiki.opnfv.org/display/functest

[files]
packages = functest
scripts =
    functest/ci/convert_images.sh
    functest/ci/download_images.sh

[entry_points]
console_scripts =
    functest_odl = functest.opnfv_tests.sdn.odl.odl:main
    check_deployment = functest.ci.check_deployment:main
xtesting.testcase =
    connection_check = functest.opnfv_tests.openstack.api.connection_check:ConnectionCheck
    tenantnetwork1 = functest.core.tenantnetwork:TenantNetwork1
    tenantnetwork2 = functest.core.tenantnetwork:TenantNetwork2
    vmready1 = functest.core.singlevm:VmReady1
    vmready2 = functest.core.singlevm:VmReady2
    singlevm1 = functest.core.singlevm:SingleVm1
    singlevm2 = functest.core.singlevm:SingleVm2
    vping_ssh = functest.opnfv_tests.openstack.vping.vping_ssh:VPingSSH
    vping_userdata = functest.opnfv_tests.openstack.vping.vping_userdata:VPingUserdata
    cinder_test = functest.opnfv_tests.openstack.cinder.cinder_test:CinderCheck
    odl = functest.opnfv_tests.sdn.odl.odl:ODLTests
    api_check = functest.opnfv_tests.openstack.snaps.api_check:ApiCheck
    snaps_health_check = functest.opnfv_tests.openstack.snaps.health_check:HealthCheck
    tempest_common = functest.opnfv_tests.openstack.tempest.tempest:TempestCommon
    rally_sanity = functest.opnfv_tests.openstack.rally.rally:RallySanity
    refstack_defcore = functest.opnfv_tests.openstack.refstack.refstack:Refstack
    patrole = functest.opnfv_tests.openstack.patrole.patrole:Patrole
    vmtp = functest.opnfv_tests.openstack.vmtp.vmtp:Vmtp
    shaker = functest.opnfv_tests.openstack.shaker.shaker:Shaker
    snaps_smoke = functest.opnfv_tests.openstack.snaps.smoke:SnapsSmoke
    vgpu = functest.opnfv_tests.openstack.vgpu.vgpu:vGPU
    rally_full = functest.opnfv_tests.openstack.rally.rally:RallyFull
    cloudify = functest.core.cloudify:Cloudify
    cloudify_ims = functest.opnfv_tests.vnf.ims.cloudify_ims:CloudifyIms
    heat_ims = functest.opnfv_tests.vnf.ims.heat_ims:HeatIms
    vyos_vrouter = functest.opnfv_tests.vnf.router.cloudify_vrouter:CloudifyVrouter
    juju_epc = functest.opnfv_tests.vnf.epc.juju_epc:JujuEpc

[build_sphinx]
all_files = 1
build-dir = api/build/
source-dir = api

[wheel]
universal = 1
