[metadata]
name = functest
version = 10
home-page = https://wiki.opnfv.org/display/functest

[files]
packages = functest
scripts =
    functest/ci/add_proxy.sh
    functest/ci/convert_images.sh
    functest/ci/download_images.sh

[entry_points]
console_scripts =
    functest_odl = functest.opnfv_tests.sdn.odl.odl:main
xtesting.testcase =
    connection_check = functest.opnfv_tests.openstack.api.connection_check:ConnectionCheck
    tenantnetwork1 = functest.core.tenantnetwork:TenantNetwork1
    tenantnetwork2 = functest.core.tenantnetwork:TenantNetwork2
    vmready1 = functest.core.singlevm:VmReady1
    vmready2 = functest.core.singlevm:VmReady2
    singlevm1 = functest.core.singlevm:SingleVm1
    singlevm2 = functest.core.singlevm:SingleVm2
    vping_ssh = functest.opnfv_tests.openstack.vping.vping_ssh:VPingSSH
    vping_userdata = functest.opnfv_tests.openstack.vping.vping_userdata:VPingUserdata
    cinder_test = functest.opnfv_tests.openstack.cinder.cinder_test:CinderCheck
    odl = functest.opnfv_tests.sdn.odl.odl:ODLTests
    tempest_common = functest.opnfv_tests.openstack.tempest.tempest:TempestCommon
    tempest_horizon = functest.opnfv_tests.openstack.tempest.tempest:TempestHorizon
    tempest_heat = functest.opnfv_tests.openstack.tempest.tempest:TempestHeat
    rally_sanity = functest.opnfv_tests.openstack.rally.rally:RallySanity
    refstack = functest.opnfv_tests.openstack.refstack.refstack:Refstack
    patrole = functest.opnfv_tests.openstack.patrole.patrole:Patrole
    barbican = functest.opnfv_tests.openstack.barbican.barbican:Barbican
    vmtp = functest.opnfv_tests.openstack.vmtp.vmtp:Vmtp
    shaker = functest.opnfv_tests.openstack.shaker.shaker:Shaker
    rally_full = functest.opnfv_tests.openstack.rally.rally:RallyFull
    cloudify = functest.core.cloudify:Cloudify
    cloudify_ims = functest.opnfv_tests.vnf.ims.cloudify_ims:CloudifyIms
    heat_ims = functest.opnfv_tests.vnf.ims.heat_ims:HeatIms
    vyos_vrouter = functest.opnfv_tests.vnf.router.cloudify_vrouter:CloudifyVrouter
    juju_epc = functest.opnfv_tests.vnf.epc.juju_epc:JujuEpc
    rally_jobs = functest.opnfv_tests.openstack.rally.rally:RallyJobs

[build_sphinx]
all_files = 1
build-dir = api/build/
source-dir = api

[wheel]
universal = 1
